test/ui/lowering/abnormally-bodiless.stderr
error[E012]: the declaration ‘blank’ does not have a body
  ┌─ ${TEST_FOLDER}/lowering/abnormally-bodiless.lushui:1:19
  │
1 │ blank: Declaration
  │                  ⟫⟪ missing definition
  │
 help: provide a definition for the declaration
  ┌─ ${TEST_FOLDER}/lowering/abnormally-bodiless.lushui:1:19
  │
1 │ blank: Declaration = value
  │                   ~~~~~~~~

error[E012]: the declaration ‘Blank’ does not have a body
  ┌─ ${TEST_FOLDER}/lowering/abnormally-bodiless.lushui:3:11
  │
3 │ data Blank
  │          ⟫⟪ missing definition
  │
 help: provide a definition for the declaration
  ┌─ ${TEST_FOLDER}/lowering/abnormally-bodiless.lushui:3:11
  │
3 │ data Blank of …
  │           ~~~~~

error: aborting due to 2 previous errors

